# PRSPServer

./: .gitignore  CMakeLists.txt  README.md  dbtest.cpp  test.cpp  test.html  test_chats.html
src/: chat_func.h  conf.cpp  conf.h  crypt.cpp  crypt.h  database.cpp  database.h  helpers.h  main.cpp  routefunc.h  settings.ini  validators.h  wsserver.cpp  wsserver.h
